--- a/notes/macros.tex
+++ b/notes/macros.tex
@@ -86,3 +86,22 @@
 
 \newcommand{\sol}{\setlength{\parindent}{0cm}\textbf{\textit{Solution:}}\setlength{\parindent}{1cm} }
 \newcommand{\solve}[1]{\setlength{\parindent}{0cm}\textbf{\textit{Solution: }}\setlength{\parindent}{1cm}#1 \Qed}
+
+\newcommand{\pa}[1]{\left(#1\right)} % encloses the argument using stretchable parentheses
+\newcommand{\bra}[1]{\left[#1\right]} % encloses the argument using stretchable square brackets
+
+% matrices for displayed expressions
+\newcommand{\mat}[1]{\begin{matrix}#1\end{matrix}} % no delimiters
+\newcommand{\pmat}[1]{\pa{\mat{#1}}} % parentheses as delimiters
+\newcommand{\bmat}[1]{\bra{\mat{#1}}} % square brackets as delimiters
+
+% variations of \frac and \sfrac
+\newcommand{\pfrac}[2]{\pa{\frac{#1}{#2}}} % enclosed in parentheses
+\newcommand{\bfrac}[2]{\bra{\frac{#1}{#2}}} % enclosed in square brackets
+\newcommand{\psfrac}[2]{\pa{\sfrac{#1}{#2}}} % sfrac enclosed in parentheses
+\newcommand{\bsfrac}[2]{\bra{\sfrac{#1}{#2}}} % sfrac enclosed in square brackets
+
+% for small matrices to be used in in-line expressions
+\newcommand{\sm}[1]{\begin{smallmatrix}#1\end{smallmatrix}} % no delimiters 
+\newcommand{\psm}[1]{\pa{\sm{#1}}} % parentheses as delimiters
+\newcommand{\bsm}[1]{\bra{\sm{#1}}} % square brackets as delimiters
