--- a/notes/AICC-1/AICC-1.tex
+++ b/notes/AICC-1/AICC-1.tex
@@ -1,4 +1,4 @@
-\documentclass{report}
+\documentclass[12pt]{extreport}
 
 \input{preamble}
 \input{macros}
@@ -17,6 +17,7 @@
 \tableofcontents
 \pagebreak
 
+\chapter{Logic and Mathematical Reasoning}
 \input{lecture1}
 
 \chapter{}
