--- a/notes/AICC-1/lecture1.tex
+++ b/notes/AICC-1/lecture1.tex
@@ -1,4 +1,4 @@
-\chapter{2023/09/19}
+\subsection{test}
 
 $a^2 + b^2 = c^2$
 
@@ -18,3 +18,26 @@ $$ \int_{0}^{\infty} f(x) dx$$
 \cor{}{}
 \mlenma{}{}
 \mprop{}{}
+
+\section{2023/09/19: Introduction/Organisation}
+\subsection{Interactive course with SpeakUp}
+\href{https://go.epfl.ch/speakup-aicc-23}{SpeakUp}
+\subsection{Ed Discussion}
+\href{https://edstem.org/eu/courses/702/discussion/}{Ed Discussion}
+\begin{itemize}
+	\item Questions on course content
+	\item Anytime
+	\item Public, but anonomynous
+\end{itemize}
+\subsection{Moodle forum}
+\href{https://moodle.epfl.ch/mod/forum/view.php?id=1215519}{Moodle forum}
+\begin{itemize}
+	\item Organisational questions
+	\item Anytime
+	\item Public
+\end{itemize}
+\subsection{Office hours}
+Tuesday 17:15 - 18:30 starting on September 26
+\subsection{Quizes}
+On weeks 4, 7, 10 and 12: Worst grade will be canceled
+\section{2023/09/19: Propositional Logic}
